--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -9,12 +9,59 @@
 </head>
 <body>
 
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <div class="container">
+
+        <div class="navbar-header">
+            <a class="navbar-brand" href="/" title="Home">Price Home</a>
+        </div>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbar"
+                aria-controls="navbar" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div id="navbar" class="collapse navbar-collapse">
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" href="{{ url_for('stores.index') }}"><i class="fas fa-warehouse fa-sm"></i> Stores</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="{{ url_for('alerts.index') }}"><i class="fas fa-bell fa-sm"></i> Alerts</a>
+                </li>
+            </ul>
+
+            <ul class="nav navbar-nav ml-auto">
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        <i class="fas fa-user fa-sm"></i> Account
+                    </a>
+                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        {% if session['email'] %}
+                            <a class="dropdown-item" href="{{ url_for('users.user_profile') }}"><i class="fas fa-user-circle fa-sm"></i> Profile</a>
+                            <div class="dropdown-divider"></div>
+                            <a class="dropdown-item" href="{{ url_for('users.user_settings') }}"><i class="fas fa-cog fa-sm"></i> Settings</a>
+                            <a class="dropdown-item" href="{{ url_for('users.logout_user') }}"><i class="fas fa-user-slash fa-sm"></i> Log out</a>
+                        {% else %}
+                            <a class="dropdown-item" href="{{ url_for('users.register_user') }}"><i class="fas fa-user-check fa-sm"></i> Log in</a>
+                            <a class="dropdown-item" href="{{ url_for('users.login_user') }}"><i class="fas fa-user-plus fa-sm"></i> Register</a>
+                        {% endif %}
+
+                    </div>
+                </li>
+            </ul>
+        </div>
+    </div>
+</nav>
+
 <div class="content container">
-    <p> all beans will be loved</p>
+
     {% block content %}
 
     {% endblock %}
 </div>
+
 
 </body>
 </html>
