--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -44,8 +44,8 @@
                             <a class="dropdown-item" href="{{ url_for('users.user_settings') }}"><i class="fas fa-cog fa-sm"></i> Settings</a>
                             <a class="dropdown-item" href="{{ url_for('users.logout_user') }}"><i class="fas fa-user-slash fa-sm"></i> Log out</a>
                         {% else %}
-                            <a class="dropdown-item" href="{{ url_for('users.register_user') }}"><i class="fas fa-user-check fa-sm"></i> Log in</a>
-                            <a class="dropdown-item" href="{{ url_for('users.login_user') }}"><i class="fas fa-user-plus fa-sm"></i> Register</a>
+                            <a class="dropdown-item" href="{{ url_for('users.login_user') }}"><i class="fas fa-user-check fa-sm"></i> Log in</a>
+                            <a class="dropdown-item" href="{{ url_for('users.register_user') }}"><i class="fas fa-user-plus fa-sm"></i> Register</a>
                         {% endif %}
 
                     </div>
