--- a/src/templates/users/login.html
+++ b/src/templates/users/login.html
@@ -1,6 +1,21 @@
 {% extends 'base.html' %}
 {% block content %}
 
-You will log in here
+<div class="form-size">
+    <form action="{{ url_for('users.login_user') }}" method="post">
+        <div class="form-group">
+            <label for="email">Email Address</label>
+            <input type="email" class="form-control" id="email" name="email" placeholder="Email">
+        </div>
+
+        <div class="form-group">
+            <label for="password">Password</label>
+            <input type="password" class="form-control" id="password" name="password" placeholder="Password">
+        </div>
+
+        <button type="submit" class="btn btn-primary button-right">Log in</button>
+    </form>
+</div>
+
 
 {% endblock %}
