--- a/src/static/css/style.css
+++ b/src/static/css/style.css
@@ -10,6 +10,21 @@
     overflow:hidden;
 }
 
+.settings {
+    max-width: 640px;
+    margin: 0 auto;
+    background-color: #E5E5E5;
+    padding: 25px;
+    border: 3px solid #D3D3D3;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    border-radius: 5px;
+    overflow:hidden;
+}
+
+.settings-button {
+}
+
 .button-right {
     float: right;
 }
