--- a/src/templates/alerts/create.html
+++ b/src/templates/alerts/create.html
@@ -1,6 +1,25 @@
 {% extends 'base.html' %}
 {% block content %}
 
-Create an alert
+<div class="form-size">
+    <form action="{{ url_for('alerts.create_alert') }}" method="post">
+        <div class="form-group">
+            <label for="item_name">Item Name</label>
+            <input type="text" class="form-control" id="item_name" name="item_name" placeholder="Your Item">
+        </div>
+
+        <div class="form-group">
+            <label for="item_url">Item URL</label>
+            <input type="text" class="form-control" id="item_url" name="item_url" placeholder="https://store.com/item">
+        </div>
+
+        <div class="form-group">
+            <label for="desired_price">Desired Price</label>
+            <input type="text" class="form-control" id="desired_price" name="desired_price" placeholder="$100">
+        </div>
+
+        <button type="submit" class="btn btn-primary button-right">Create Alert</button>
+    </form>
+</div>
 
 {% endblock %}
