--- a/src/templates/stores/create.html
+++ b/src/templates/stores/create.html
@@ -1,6 +1,41 @@
 {% extends 'base.html' %}
 {% block content %}
 
-Make a new store
+<div class="form-size">
+    <form action="{{ url_for('stores.create_store') }}" method="post">
+        <div class="form-group">
+            <label for="store_name">Store Name</label>
+            <input type="text" class="form-control" id="store_name" name="store_name" placeholder="Store Name">
+        </div>
+
+        <div class="form-group">
+            <label for="store_url">Store URL</label>
+            <input type="text" class="form-control" id="store_url" name="store_url" placeholder="https://store.com/">
+        </div>
+
+        <div class="form-group">
+            <label for="tag_name">Tag Name</label>
+            <div class="input-group-prepend">
+                <input type="text" class="form-control" id="tag_name" name="tag_name" placeholder="span">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="query_object">Query Object Type</label>
+            <div class="input-group-prepend">
+                <input type="text" class="form-control" id="query_object" name="query_object" placeholder="itemprop">
+            </div>
+        </div>
+
+        <div class="form-group">
+            <label for="query_value">Query Value</label>
+            <div class="input-group-prepend">
+                <input type="text" class="form-control" id="query_value" name="query_value" placeholder="itemprop">
+            </div>
+        </div>
+
+        <button type="submit" class="btn btn-primary button-right">Create Store</button>
+    </form>
+</div>
 
 {% endblock %}
