--- a/src/templates/stores/index.html
+++ b/src/templates/stores/index.html
@@ -1,6 +1,34 @@
 {% extends 'base.html' %}
 {% block content %}
 
-We currently support the following web stores:
+<div class="form-size">
+    {% if all_stores %}
+    We currently support the following web stores:<br>
+        <div class="list-group">
+        {% for store in all_stores %}
+            <a href="{{ store.domain }}" target="_blank" class="list-group-item">
+                <span class="alignleft">
+                    {{ store.name }}
+                </span>
+                <span class="alignright">
+                    <object type="fake object">
+                        <a href="{{ url_for('stores.edit_store', store_id=store._id) }}">
+                            <i class="fas fa-pen"></i>
+                        </a>
+                         &nbsp;
+                        <a href="{{ url_for('stores.remove_store', store_id=store._id) }}">
+                            <i class="fas fa-times-circle"></i>
+                        </a>
+                    </object>
+                </span>
+            </a>
+        {% endfor %}
+        </div>
+    <br>
+    <a class="btn btn-primary" href="{{ url_for('stores.create_store') }}" role="button">Add New Store</a>
+    {% else %}
+    There are no stores yet! Would you like to <a href="{{ url_for('stores.create_store') }}">add one?</a>
+    {% endif %}
+</div>
 
 {% endblock %}
